--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 /*
  * Theme Name: Rename Me!
- *
-**/
+ * Description: A spiffy new theme
+ * Version: 0.01
+ * License: GNU General Public License v3 or later
+ * License URI: http://www.gnu.org/licenses/gpl-3.0.html
+ * Tags: gutenberg, bootstrap, acf-pro, custom
+ */
