--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 /*
- * Theme Name: Rename Me!
- * Description: A spiffy new theme
- * Version: 0.01
- * License: GNU General Public License v3 or later
- * License URI: http://www.gnu.org/licenses/gpl-3.0.html
+ * Theme Name: ACFberg
+ * Description: Custom theme with ACF and Gutenberg support
+ * Version: 1.1
+ * Text Domain: acfberg
  * Tags: gutenberg, bootstrap, acf-pro, custom
- */
+**/
